# Vertex-Core

./: .gitignore  LICENSE  README.md  build-vertex.sh
assets/: README.md
assets/branding/: README.md
assets/fonts/sf-pro-display/: README.md
assets/fonts/space-grotesk/: README.md
config/: README.md
config/boot/grub/: vertex-usb-grub.cfg
config/display-manager/: README.md
config/display-manager/sddm/: README.md
config/kernel/: README.md  vertex-desktop-performance.fragment
config/performance/: README.md
config/shell/: README.md
config/shell/zsh/: vertex.zshrc
config/terminal/: README.md
config/window-manager/: README.md  hyprland-performance.conf  hyprland.conf
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  UI_UX_VISION.md
installer/: README.md
installer/live/: README.md
installer/recovery/: README.md
patches/: README.md
preview/: README.md
preview/desktop/: README.md  STRUCTURE.md  index.html  styles.css  system-info.js
scripts/: build-html-lock-os.sh  build-kernel.sh  build-smoke-os.sh  build-usb-live.sh  fetch-kernel.sh  init-build-env.sh  run-html-lock-os.ps1  run-html-lock-os.sh  run-local-checks.ps1  run-smoke-os.ps1  run-smoke-os.sh  run-usb-live-os.ps1  update-usb-live-boot.sh  vertex-lockscreen-session.sh  write-usb-live.sh
services/: README.md
services/systemd/: README.md
src/native/: README.md
src/native/vertex-sessiond/: CMakeLists.txt
src/native/vertex-sessiond/src/: vertex-sessiond.cpp
tools/: README.md
tools/python/: pyproject.toml
tools/python/vertex_tools/: __init__.py  cli.py
tools/rust/: README.md
(+44 files in other folders)
