[project]
name = "vertex-tools"
version = "0.1.0"
description = "Python build and release tooling for Vertex"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
vertex-build = "vertex_tools.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
